--- a/posts/Team.mdx
+++ b/posts/Team.mdx
@@ -1,7 +1,7 @@
 ---
-title: Mental models for designers PART 2
+title: Team: Aces in Eight
 description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
-date: Sep 14 2021
+date: June 4th 2023
 ---
 
-This is an example post. There's another one [here](/posts/example-post).
+This is the Team post. Here's the project [description](/posts/example-post).
