1 single misplaced colon broke the build

--- a/posts/Team.mdx
+++ b/posts/Team.mdx
@@ -1,6 +1,6 @@
 ---
-title: Team: Aces in Eight
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: Team Aces in Eight
+description: "Team members: Phone and Ryan. SWE 6783. Summer 2023."
 date: June 4th 2023
 ---
 
