Update to deliverable 2

--- a/posts/Analysis.mdx
+++ b/posts/Analysis.mdx
@@ -1,6 +1,6 @@
 ---
-title: Consistency and Creativity: A User Analysis
-description: An in-depth analysis of the user classes, characteristics, and stories for the project.
+title: Analysis
+description: Deliverable 2
 date: June 18th 2023
 ---
 
