--- a/posts/Analysis.mdx
+++ b/posts/Analysis.mdx
@@ -1,16 +1,10 @@
 ---
 title: Analysis
-description: Deliverable 2
+description: This is the analysis of the users, tasks, and domain for the project.
 date: June 18th 2023
 ---
 
-# Team Name: Aces in Eight
-
-**Team #8 Members**: Phone Tun, Ryan O’Connor
-
 ## Project Title: Consistency and Creativity
-
-### Deliverable #2
 
 ## User Analysis
 
